# abovedata-backtesting

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/signal-data/ticker=ABBV/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=ABT/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=AGCO/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=ALC/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=ALG/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=ALGN/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=APYX/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=ASTE/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=BAX/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=BDX/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=BHC/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=BSX/method=stl_p4_s7_robustTrue/: processed_data.parquet
data/signal-data/ticker=BWAY/method=stl_p4_s7_robustTrue/: processed_data.parquet
results/cross_ticker_analysis/: README.md  best_signal_per_ticker.csv  cross_predictive_pairs.csv  natural_hedges.csv  signal_screening_all.csv  signal_type_summary.csv  significant_signals.csv
results/ticker=AGCO/time=20260208_153043/: metadata.json
results/ticker=AGCO/time=latest/: metadata.json
results/ticker=ALGN/time=latest/: metadata.json
results/ticker=CAT/time=latest/: metadata.json
results/ticker=DE/time=20260208_152805/: metadata.json
results/ticker=DE/time=latest/: metadata.json
results/ticker=ISRG/time=latest/: metadata.json
results/ticker=PCAR/time=latest/: metadata.json
results/ticker=PRCT/time=latest/: metadata.json
results/ticker=TTC/time=latest/: metadata.json
results/ticker=ZBH/time=latest/: metadata.json
src/abovedata_backtesting/benchmarks/: benchmark_models.py  benchmark_results.py
src/abovedata_backtesting/data_loaders/: load_market_data.py  load_signal_data.py  utils.py
src/abovedata_backtesting/entries/: correlation_aware_entry.py  cross_ticker_entry.py  entry_context.py  entry_signals.py  multi_horizon_entry.py
src/abovedata_backtesting/exits/: cython_exits.c  cython_exits.py  exit_strategies.py
src/abovedata_backtesting/model/: metrics.py  strategy_models.py
src/abovedata_backtesting/processors/: benchmark_processor.py  signal_preprocessor.py  signal_processor.py  signal_transforms.py  strategy_processor.py
src/abovedata_backtesting/trades/: analysis_utils.py  report_generator.py  robustness_tests.py  trade_analyzer.py  trade_log.py  trade_save_results.py
src/notebooks/: benchmark_main.py  correlation_aware_strategy_main.py  cross_ticker_signal_analysis.py  cross_ticker_strategy_main.py
tests/: test_cython_exit_parity.py  test_signal_transforms.py
(+425 files in other folders)
